--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fi">
 <head>
     <meta charset="UTF-8">
-    <title>Server HTML</title>
+    <title>QuestbookL</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 </head>
