--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang="fi">
 <head>
     <meta charset="UTF-8">
-    <title>QuestbookL</title>
+    <title>Vieraskirja</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </head>
 <body>
-    <h1>Prokkis1</h1>
+    <h1>Vieraskirja</h1>
     
-
+    <nav>
+        <ul>
+            <li><a href="/guestbook">Vieraskirja</a></li>
+            <li><a href="/newmessage">Jätä viestisi</a></li>
+        </ul>
+    </nav>
     
 </body>
 </html>
