--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="fi">
 <head>
     <meta charset="UTF-8">
-    <title>Vieraskirja</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Projektityö1</title>
+    <link rel="stylesheet" href="css/styles.css">
     <script src="index.js"></script>
 </head>
 <body>
     <h1>Vieraskirja</h1>
     
+    <section class="random-elements">
+        <h2>Vieraskirja</h2>
+        <img src="https://picsum.photos/200/300" alt="Random Image">
+    </section>
     <nav>
         <ul>
             <li><a href="/guestbook">Vieraskirja</a></li>
