--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <h1>Vieraskirja</h1>
     
     <section class="random-elements">
-        <h2>Vieraskirja</h2>
-        <img src="https://picsum.photos/200/300" alt="Random Image">
-    </section>
+        <h2>Tervetuloa vieraskirjaan</h2>
+        <img src="https://res.cloudinary.com/karkkainen/image/upload/b_rgb:FFFFFF,c_pad,dpr_2.0,f_auto,h_600,q_auto,w_600/c_pad,h_600,w_600/v1/tuotekuvat/9789512383719?pgw=1" alt="vieraskirja">
+
     <nav>
         <ul>
             <li><a href="/guestbook">Vieraskirja</a></li>
-            <li><a href="/newmessage">Jätä viestisi</a></li>
+            <li><a href="/message">Jätä viestisi</a></li>
         </ul>
     </nav>
-    
+        </section>
 </body>
 </html>
