--- a/message.html
+++ b/message.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Form</title>
+    <title>Vieraskirja</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
